--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./main-dist/index.js",
   "scripts": {
     "start:main": "tsc -w --p tsconfig.main.json",
-    "start:react": "webpack serve --config render/config/webpack.dev.js",
-    "build:react": "webpack --config render/config/webpack.prod.js",
+    "start:react": "vite",
+    "build:react": "tsc && vite build",
     "build:main": "tsc --p tsconfig.main.json",
     "start:electron": "electron ./main-dist/index",
     "build:mac": "electron-builder --mac",
@@ -41,30 +41,34 @@
   "author": "xiaoming",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^17.0.80",
+    "@types/react-dom": "^17.0.25",
+    "@vitejs/plugin-react": "^4.2.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "electron": "^15.1.2",
-    "electron-builder": "^22.13.1",
+    "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "less-loader": "^10.0.1",
+    "prettier": "^3.2.5",
     "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
+    "typescript": "^5.4.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.58.1",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0"
+    "vite": "^5.2.11"
   },
   "dependencies": {
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "electron-is-dev": "^2.0.0",
+    "esbuild": "^0.21.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^6.23.1"
   }
 }
