feat: 本地图片展示

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "baseUrl": "./render",
+  "baseUrl": "",
   "paths": {
     "@/*": ["src/*"]
   },
