--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-react",
+  "name": "pluto",
   "version": "1.0.0",
   "description": "electron of react",
   "main": "./main-dist/index.js",
@@ -69,6 +69,7 @@
     "esbuild": "^0.21.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "sharp": "0.32.6"
   }
 }
