--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@mui/material": "^5.15.18",
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
+    "image-size": "^1.1.1",
+    "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.23.1",
