--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "baseUrl": "",
-  "paths": {
-    "@/*": ["src/*"]
-  },
+
   "include": ["./render/**/*", "./main/**/*"],
   "exclude": ["assets", "node_modules", "main-dist"]
   // "references": [{ "path": "./tsconfig.node.json" }]
