--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@types/uuid": "^9.0.8",
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
     "image-size": "^1.1.1",
@@ -72,6 +73,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.23.1",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "uuid": "^9.0.1"
   }
 }
