--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@types/uuid": "^9.0.8",
+    "ahooks": "^3.8.0",
+    "dayjs": "^1.11.11",
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
     "image-size": "^1.1.1",
