--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["render/src/*"],
+      "@main/*": ["main/*"]
     }
   },
 
