--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "ts-loader": "^9.2.6",
     "typescript": "^5.4.5",
     "url-loader": "^4.1.1",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-plugin-svg-icons": "^2.0.1"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
