feat: 路由组件抽离

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "electron": "^15.1.2",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.1",
+    "fast-glob": "^3.3.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "less-loader": "^10.0.1",
@@ -68,6 +69,7 @@
     "@mui/material": "^5.15.18",
     "@types/uuid": "^9.0.8",
     "ahooks": "^3.8.0",
+    "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.11",
     "electron-is-dev": "^2.0.0",
