--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^17.0.80",
     "@types/react-dom": "^17.0.25",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "electron": "^15.1.2",
@@ -53,8 +54,10 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "less-loader": "^10.0.1",
+    "postcss": "^8.4.39",
     "prettier": "^3.2.5",
     "style-loader": "^3.3.0",
+    "tailwindcss": "^3.4.4",
     "ts-loader": "^9.2.6",
     "typescript": "^5.4.5",
     "url-loader": "^4.1.1",
