--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "author": "xiaoming",
   "license": "ISC",
   "devDependencies": {
+    "@types/hammerjs": "^2.0.45",
     "@types/react": "^17.0.80",
     "@types/react-dom": "^17.0.25",
     "@vitejs/plugin-react": "^4.2.1",
@@ -70,7 +71,9 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@react-spring/web": "^9.7.3",
     "@types/uuid": "^9.0.8",
+    "@use-gesture/react": "^10.3.1",
     "ahooks": "^3.8.0",
     "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
