--- a/package.json
+++ b/package.json
@@ -77,11 +77,13 @@
     "ahooks": "^3.8.0",
     "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.11",
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
     "image-size": "^1.1.1",
     "localforage": "^1.10.0",
+    "node-machine-id": "^1.1.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.23.1",
