feat: 引入shadcn组件库

--- a/package.json
+++ b/package.json
@@ -41,14 +41,13 @@
   "author": "xiaoming",
   "license": "ISC",
   "devDependencies": {
-    "@types/hammerjs": "^2.0.45",
-    "@types/react": "^17.0.80",
-    "@types/react-dom": "^17.0.25",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
-    "electron": "^15.1.2",
+    "electron": "^15.5.7",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.1",
     "fast-glob": "^3.3.2",
@@ -69,13 +68,20 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@react-spring/web": "^9.7.3",
     "@types/uuid": "^9.0.8",
     "@use-gesture/react": "^10.3.1",
     "ahooks": "^3.8.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.11",
@@ -83,11 +89,16 @@
     "esbuild": "^0.21.3",
     "image-size": "^1.1.1",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.407.0",
     "node-machine-id": "^1.1.12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.1",
     "sharp": "0.32.6",
-    "uuid": "^9.0.1"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   }
 }
