--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 electron_mirror=https://npmmirror.com/mirrors/electron/
-sharp_binary_host=https://npmmirror.com/mirrors/sharp
-sharp_libvips_binary_host=https://npmmirror.com/mirrors/sharp-libvips
+# sharp_binary_host=https://npmmirror.com/mirrors/sharp
+# sharp_libvips_binary_host=https://npmmirror.com/mirrors/sharp-libvips
