--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.1",
     "sharp": "0.32.6",
+    "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
