--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "build:main": "tsc --p tsconfig.main.json",
     "start:electron": "electron ./main-dist/index",
     "build:mac": "electron-builder --mac",
-    "build:win": "electron-builder --win"
+    "build:win": "electron-builder --win",
+    "postinstall": "electron-builder install-app-deps && electron-rebuild"
   },
   "build": {
+    "files": [
+      "package.json",
+      "main-dist/**/*",
+      "node_modules/**/*",
+      "render/dist/**/*"
+    ],
+    "asar": true,
+    "asarUnpack": [
+      "**/node_modules/sharp/**/*",
+      "**/node_modules/@img/**/*"
+    ],
     "productName": "test",
     "appId": "org.react.vas",
     "mac": {
@@ -41,6 +53,7 @@
   "author": "xiaoming",
   "license": "ISC",
   "devDependencies": {
+    "@electron/rebuild": "^3.6.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -53,8 +66,10 @@
     "fast-glob": "^3.3.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^4.2.0",
     "less-loader": "^10.0.1",
     "postcss": "^8.4.39",
+    "prebuild-install": "^7.1.2",
     "prettier": "^3.2.5",
     "style-loader": "^3.3.0",
     "tailwindcss": "^3.4.4",
