--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "chokidar": "^3.6.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "electron": "^15.5.7",
