--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "electron of react",
   "main": "./main-dist/index.js",
   "scripts": {
+    "pri": "prisma generate",
     "start:main": "tsc -w --p tsconfig.main.json",
     "start:react": "bash start.sh&&vite",
     "build:react": "tsc && vite build",
@@ -15,6 +16,7 @@
   },
   "build": {
     "files": [
+      "prisma/**/*",
       "package.json",
       "main-dist/**/*",
       "node_modules/**/*",
@@ -54,6 +56,8 @@
   "license": "ISC",
   "devDependencies": {
     "@electron/rebuild": "^3.6.0",
+    "@types/koa-router": "^7.4.8",
+    "@types/koa__cors": "^5.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -82,7 +86,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@koa/cors": "^5.0.0",
+    "@prisma/client": "5.18.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
@@ -90,6 +97,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-spring/web": "^9.7.3",
+    "@types/qs": "^6.9.15",
     "@types/uuid": "^9.0.8",
     "@use-gesture/react": "^10.3.1",
     "ahooks": "^3.8.0",
@@ -102,9 +110,14 @@
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
     "image-size": "^1.1.1",
+    "koa": "^2.15.3",
+    "koa-body": "^6.0.1",
+    "koa-router": "^12.0.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.407.0",
     "node-machine-id": "^1.1.12",
+    "prisma": "^5.18.0",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
