feat: prisma、sqlite接入生产环境

--- a/package.json
+++ b/package.json
@@ -7,23 +7,39 @@
     "pri": "prisma generate",
     "start:main": "tsc -w --p tsconfig.main.json",
     "start:react": "bash start.sh&&vite",
-    "build:react": "tsc && vite build",
+    "build:react": "vite build",
     "build:main": "tsc --p tsconfig.main.json",
     "start:electron": "electron ./main-dist/index",
-    "build:mac": "electron-builder --mac",
+    "build:mac": "node scripts/build.js && vite build && electron-builder --mac",
     "build:win": "electron-builder --win",
     "postinstall": "electron-builder install-app-deps && electron-rebuild"
   },
   "build": {
+    "extraResources": [
+      {
+        "from": "node_modules/@prisma/engines/libquery_engine-darwin-arm64.dylib.node",
+        "to": "resources/engines/libquery_engine-darwin-arm64.dylib.node"
+      },
+      {
+        "from": "prisma/migrations",
+        "to": "resources/prisma/migrations"
+      },
+      {
+        "from": "prisma/schema.prisma",
+        "to": "resources/prisma/schema.prisma"
+      }
+    ],
     "files": [
-      "prisma/**/*",
       "package.json",
+      "prisma/migrations/**/*",
       "main-dist/**/*",
       "node_modules/**/*",
       "render/dist/**/*"
     ],
     "asar": true,
     "asarUnpack": [
+      "**/node_modules/prisma/**/*",
+      "**/node_modules/@prisma/**/*",
       "**/node_modules/sharp/**/*",
       "**/node_modules/@img/**/*"
     ],
@@ -114,6 +130,7 @@
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
     "localforage": "^1.10.0",
+    "log4js": "^6.9.1",
     "lucide-react": "^0.407.0",
     "node-machine-id": "^1.1.12",
     "prisma": "^5.18.0",
