--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@koa/cors": "^5.0.0",
     "@prisma/client": "5.18.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
