--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "pri": "prisma generate",
     "start:main": "tsc -w --p tsconfig.main.json",
-    "start:react": "bash start.sh && vite",
+    "start:react": "bash start.sh && vite --config vite.config.ts",
     "build:react": "vite build",
     "build:main": "tsc --p tsconfig.main.json",
     "start:electron": "electron ./main-dist/index",
@@ -104,13 +104,16 @@
     "@hookform/resolvers": "^3.9.0",
     "@koa/cors": "^5.0.0",
     "@prisma/client": "5.18.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-spring/web": "^9.7.3",
