--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
     "@types/koa__cors": "^5.0.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -138,6 +139,8 @@
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "log4js": "^6.9.1",
     "lucide-react": "^0.407.0",
     "node-machine-id": "^1.1.12",
