--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "chokidar": "^3.6.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
-    "electron": "^15.5.7",
+    "electron": "32.1.2",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.1",
     "fast-glob": "^3.3.2",
@@ -130,6 +130,7 @@
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.11",
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
@@ -147,6 +148,7 @@
     "prisma": "^5.18.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.1",
