--- a/package.json
+++ b/package.json
@@ -143,7 +143,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "log4js": "^6.9.1",
-    "lucide-react": "^0.407.0",
+    "lucide-react": "^0.445.0",
     "node-machine-id": "^1.1.12",
     "prisma": "^5.18.0",
     "qs": "^6.13.0",
@@ -152,6 +152,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
