--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "eslint ./render --fix",
     "pri": "prisma generate",
     "start:main": "tsc -w --p tsconfig.main.json",
-    "start:react": "bash start.sh && vite --config vite.config.ts",
+    "start:react": "bash start.sh && cross-env PORT=31116 vite --config vite.config.ts",
     "build:react": "vite build",
     "build:main": "tsc --p tsconfig.main.json",
     "start:electron": "electron ./main-dist/index",
@@ -89,6 +89,7 @@
     "autoprefixer": "^10.4.19",
     "chokidar": "^3.6.0",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.3.0",
     "electron": "32.1.2",
     "electron-builder": "^24.13.3",
