--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "decimal.js": "^10.4.3",
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
+    "exceljs": "^4.4.0",
     "image-size": "^1.1.1",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
