--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "author": "xiaoming",
   "license": "ISC",
   "devDependencies": {
-    "esbuild": "^0.21.3",
     "@electron/rebuild": "^3.6.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
@@ -40,6 +39,7 @@
     "electron": "32.1.2",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.1",
+    "esbuild": "^0.21.3",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
@@ -104,6 +104,7 @@
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
     "lucide-react": "^0.445.0",
+    "lunar-typescript": "^1.7.6",
     "node-machine-id": "^1.1.12",
     "prisma": "^5.18.0",
     "qs": "^6.13.0",
